--- a/src/template/index.html
+++ b/src/template/index.html
@@ -64,7 +64,7 @@
         </div>
         <!-- rigt -->
         <div class="col">
-          <h1 class="my-5">Ethiopia - Yirgacheffe</h1>
+          <h1 class="my-5">ชากังราวหวานๆ</h1>
           <!-- formrow 1 -->
           <form>
             <div class="row mb-1">
